# genai-stack

./: docker-compose.yml  env.example  pyproject.toml
