[tool.poetry]
name = "genai-stack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.12.0"
python-dotenv = "^1.0.1"
wikipedia = "^1.4.0"
tiktoken = "^0.5.0"
neo4j = "^5.17.0"
streamlit = "^1.31.0"
sentence-transformers = "2.2.2"
pillow = "^10.2.0"
fastapi = "^0.109.2"
pypdf2 = "^3.0.1"
torch = "2.0.1"
pydantic = "^2.6.1"
uvicorn = "^0.27.1"
sse-starlette = "^2.0.0"
boto3 = "^1.34.39"
langchain = "^0.1.6"
langchain-community = "^0.0.19"
langchain-openai = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
